2002-07-09  Hironori FUJII  <fujii@chi.its.hiroshima-cu.ac.jp>

	* w3m.el (w3m-highlight-current-anchor): Don't infloop at the
	beginning of a buffer.

2002-07-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mode): Make `list-buffers-directory' to buffer
	local variable.
	(w3m-goto-url): Set title of the URL to `list-buffers-directory'.

	* w3m-tabmenu.el (w3m-switch-buffer): Bind
	`completion-ignore-case' to `t'.

2002-07-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.

2002-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (byte-optimize-form-code-walker): Advise to make it
	optimize throughout the and/or forms.
	(max-specpdl-size): Increase the value by 5 times for Mule 2.

2002-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-accept-japanese-characters): Don't call the external
	command when compiling.
	(examining the value for `w3m-command'): Ditto.

2002-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map): Use the key `(control space)'
	instead of `C- ' for the command `w3m-history-store-position'
	under XEmacs.

2002-06-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.53.

	* w3mhack.el (w3mhack-nonunix-lispdir): New option.
	(w3mhack-nonunix-icondir): Ditto.
	(w3mhack-nonunix-dryrun): Ditto.
	(w3mhack-nonunix-install): New function.

2002-06-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (DOCS): Add `TIPS'.

	* w3m.el (emacs-w3m-version): Release 1.2.52.

2002-06-26  Ando Tsutomu  <ando-tom@ff.iij4u.or.jp>

	* w3m-weather.el (w3m-weather-completion-table): Fix typo.

2002-06-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-info-like-map): Remove redundant code.

2002-06-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put `w3m-name-anchor' property to
	point-max().
	(w3m-fontify): Remove `w3m-name-anchor' handling.
	(w3m-search-name-anchor): Move in the screen.
