@@ -1,3 +1,9 @@
+2002-07-09  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-decoder-alist): Don't examine the existence of w3m
+	command when compiling.
+	(w3m-dirlist-cgi-program): Ditto.
+
 2002-07-09  Hironori FUJII  <fujii@chi.its.hiroshima-cu.ac.jp>
 
 	* w3m.el (w3m-highlight-current-anchor): Don't infloop at the
